--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.8
+  build_runner: ^2.7.1
   drift_dev: ^2.28.1
+  freezed: ^3.2.0
   json_serializable: ^6.7.2
 
 # For information on the generic Dart part of this file, see the
