--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
+  flutter_bloc: ^7.0.0
   sqflite: ^2.4.2
   google_fonts: ^6.3.1
   crypto: ^3.0.6
@@ -59,14 +59,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/png/
+    # - assets/png/makanan.png
+    # - assets/png/internet.png
+    # - assets/png/edukasi.png
+    # - assets/png/hadiah.png
+    # - assets/png/transport.png
+    # - assets/png/belanja.png
+    # - assets/png/rumah.png
+    # - assets/png/olahraga.png
+    # - assets/png/hiburan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
