--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,38 +87,48 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: SourceSansPro
+    - family: SourceSans3
       fonts:
-        - asset: assets/fonts/SourceSansPro-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/SourceSansPro-ExtraLightItalic.ttf
-          weight: 200
-          style: italic
-        - asset: assets/fonts/SourceSansPro-Light.ttf
-          weight: 300
-        - asset: assets/fonts/SourceSansPro-LightItalic.ttf
-          weight: 300
-          style: italic
-        - asset: assets/fonts/SourceSansPro-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/SourceSansPro-Italic.ttf
-          weight: 400
-          style: italic
-        - asset: assets/fonts/SourceSansPro-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/SourceSansPro-SemiBoldItalic.ttf
-          weight: 600
-          style: italic
-        - asset: assets/fonts/SourceSansPro-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/SourceSansPro-BoldItalic.ttf
-          weight: 700
-          style: italic
-        - asset: assets/fonts/SourceSansPro-Black.ttf
+        - asset: assets/fonts/SourceSans3-Black.ttf
           weight: 900
-        - asset: assets/fonts/SourceSansPro-BlackItalic.ttf
+        - asset: assets/fonts/SourceSans3-BlackItalic.ttf
           weight: 900
           style: italic
+        - asset: assets/fonts/SourceSans3-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/SourceSans3-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/SourceSans3-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/SourceSans3-ExtraBoldItalic.ttf
+          weight: 800
+          style: italic
+        - asset: assets/fonts/SourceSans3-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/SourceSans3-ExtraLightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/SourceSans3-Italic.ttf
+          style: italic
+        - asset: assets/fonts/SourceSans3-Light.ttf
+          weight: 300
+        - asset: assets/fonts/SourceSans3-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/SourceSans3-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/SourceSans3-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/SourceSans3-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/SourceSans3-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/SourceSans3-SemiBoldItalic.ttf
+          weight: 600
+          style: italic
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
